--- a/returns.html
+++ b/returns.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Luxe Glow privacy policy outlining data collection, usage, and protection practices for customers and partners." />
-    <title>Privacy Policy | Luxe Glow</title>
+    <meta
+      name="description"
+      content="Luxe Glow return and exchange policy covering eligibility, timelines, and instructions for product returns and replacements."
+    />
+    <title>Returns &amp; Exchanges | Luxe Glow</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -43,8 +46,8 @@
     <main>
       <section class="page-hero">
         <div class="wrapper">
-          <p class="section__label">Privacy</p>
-          <h1 class="page-hero__title">Luxe Glow Privacy Policy</h1>
+          <p class="section__label">Support</p>
+          <h1 class="page-hero__title">Returns &amp; Exchanges</h1>
           <p class="page-hero__description">Last updated: January 5, 2026</p>
         </div>
       </section>
@@ -52,60 +55,39 @@
       <section class="section">
         <div class="wrapper stack">
           <p>
-            Luxe Glow LLC ("Luxe Glow", "we") respects your privacy. This policy explains how we collect, use, and protect your
-            information when you visit our website, purchase products, or interact with our team.
+            Luxe Glow is committed to your satisfaction. If a product does not meet expectations, please review the policy below
+            and submit your request within the stated timelines.
           </p>
-          <h2>1. Information we collect</h2>
+          <h2>Eligibility</h2>
           <ul>
-            <li><strong>Personal details:</strong> Name, email, phone number, shipping/billing address.</li>
-            <li><strong>Order information:</strong> Products purchased, transaction totals, payment status.</li>
-            <li><strong>Usage data:</strong> IP address, device type, browser, and analytics metrics collected via cookies.</li>
-            <li><strong>Communications:</strong> Messages submitted through forms, email, or SMS channels.</li>
+            <li>Return requests must be submitted within 30 days of delivery.</li>
+            <li>Products must be at least 75% full and returned in original packaging.</li>
+            <li>Digital downloads, gift cards, and limited edition drops are final sale.</li>
           </ul>
-          <h2>2. How we use information</h2>
-          <ul>
-            <li>Process orders, payments, and fulfillment.</li>
-            <li>Respond to support requests and consultations.</li>
-            <li>Send marketing updates with your consent (opt-out anytime).</li>
-            <li>Improve website performance and product development.</li>
-            <li>Detect and prevent fraud or misuse.</li>
-          </ul>
-          <h2>3. Cookies &amp; tracking</h2>
+          <h2>Process</h2>
+          <ol>
+            <li>Email <a href="mailto:care@luxeglow.com">care@luxeglow.com</a> with your order number and reason for return.</li>
+            <li>Our concierge team will provide a prepaid label for eligible U.S. orders.</li>
+            <li>Refunds are issued to the original payment method within 5–7 business days of receipt.</li>
+          </ol>
+          <h2>Damaged or incorrect items</h2>
           <p>
-            We use cookies and similar technologies to remember preferences, measure site performance, and personalize content.
-            You can adjust cookie settings in your browser; disabling cookies may impact functionality.
+            Inspect your order upon arrival. If your item is damaged or incorrect, contact us within 7 days. Please include
+            photos so we can quickly process a replacement or refund.
           </p>
-          <h2>4. Third-party services</h2>
+          <h2>International returns</h2>
           <p>
-            We work with vetted partners for payment processing (Stripe, Shopify), analytics (Google Analytics), email marketing
-            (Klaviyo), and customer support (Zendesk). These partners only access data necessary to perform their services.
+            International customers are responsible for return shipping fees. Duties and taxes are non-refundable once collected
+            by customs.
           </p>
-          <h2>5. Data retention</h2>
+          <h2>Exchanges</h2>
           <p>
-            We retain customer records for as long as needed to fulfill purchases, comply with legal obligations, and maintain
-            our relationship. You may request deletion of personal data by emailing <a href="mailto:privacy@luxeglow.com"
-              >privacy@luxeglow.com</a
-            >.
-          </p>
-          <h2>6. Your rights</h2>
-          <p>
-            Depending on your jurisdiction, you may request access, correction, deletion, or restriction of your personal data.
-            EU/EEA residents can contact our DPO at <a href="mailto:dpo@luxeglow.com">dpo@luxeglow.com</a> to exercise GDPR
-            rights.
-          </p>
-          <h2>7. Data security</h2>
-          <p>
-            We employ encryption, secure hosting, and access controls to protect your data. While we follow best practices, no
-            transmission is entirely secure—please use discretion when sharing sensitive information.
-          </p>
-          <h2>8. Policy updates</h2>
-          <p>
-            We may update this policy periodically. Material changes will be announced via email or site notification. Continued
-            use of our services indicates acceptance of the updated policy.
+            To swap a product, follow the return process above and place a new order for the desired item. Exchange credits can
+            be issued for professional partners.
           </p>
           <p>
-            Questions? Email <a href="mailto:privacy@luxeglow.com">privacy@luxeglow.com</a> or write to 1840 Sunset Blvd, Los
-            Angeles, CA 90026.
+            For additional assistance, email <a href="mailto:care@luxeglow.com">care@luxeglow.com</a> or text +1 (213)
+            555-0198.
           </p>
         </div>
       </section>
@@ -131,9 +113,9 @@
           </div>
           <div class="footer-links">
             <strong>Support</strong>
-            <a href="privacy-policy.html" aria-current="page">Privacy policy</a>
+            <a href="privacy-policy.html">Privacy policy</a>
             <a href="terms.html">Terms of service</a>
-            <a href="returns.html">Returns &amp; exchanges</a>
+            <a href="returns.html" aria-current="page">Returns &amp; exchanges</a>
             <a href="wholesale.html">Wholesale program</a>
           </div>
           <div class="footer-links">
